functional-angularjs/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: functional-angularjs
spec:
  selector:
    app: functional-angularjs
  ports:
  - port: 80
    targetPort: 80
